fixed the link overflow on learn page

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -924,6 +924,10 @@ h3 {
   margin: 1em 0 0 0;
 }
 
+.label .nounderline img {
+  height: fit-content;
+}
+
 #exampleDisplay,
 #exampleFrame,
 #exampleEditor {
